# LLM-TASK-MANAGER

./: LICENSE
llm-task-manager/: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  alembic.ini  claude.md  cloudbuild.yaml  pyproject.toml  tp_final_evaluation.md
llm-task-manager/alembic/: env.py
llm-task-manager/alembic/versions/: 2d9199b81b11_add_story_descriptions_table.py  92485a568833_initial_schema_all_tables.py
llm-task-manager/app/: __init__.py  main.py
llm-task-manager/app/api/: __init__.py  comments.py  documents.py  epics.py  projects.py  sprints.py  stories.py  story_descriptions.py
llm-task-manager/app/db/: __init__.py  config.py  session.py
llm-task-manager/app/mcp/: __init__.py  __main__.py  server.py
llm-task-manager/app/models/: __init__.py  domain.py  schemas.py
llm-task-manager/app/services/: __init__.py  errors.py  sprints.py  stories.py
llm-task-manager/scripts/: claude_desktop_config.json  demo_mcp.md  demo_rest.sh  deploy.sh  setup-gcp.sh  start.sh
llm-task-manager/tests/: conftest.py  test_integration.py  test_schemas.py  test_services_sprints.py  test_services_stories.py
