[project]
name = "llm-task-manager"
version = "0.1.0"
description = "Squelette de projet pour un gestionnaire de tâches piloté par LLM."
authors = [
  { name = "Your Name", email = "you@example.com" }
]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "pydantic",
  "sqlalchemy",
  "sqlmodel",
  "psycopg[binary]",
  "mcp",
  "alembic",
]

[project.optional-dependencies]
test = [
  "pytest",
  "httpx",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

